--- a/i18n/src/commonMain/moko-resources/base/strings.xml
+++ b/i18n/src/commonMain/moko-resources/base/strings.xml
@@ -1338,3 +1338,8 @@
     <string name="download_speed_limit">Download speed limit</string>
     <string name="download_speed_limit_hint">Set to 0 to disable the speed limit.</string>
 </resources>
+    <string name="pref_category_torrentserver">TorrentServer Preferences</string>
+    <string name="pref_torrentserver_port">TorrentServer Port</string>
+    <string name="pref_torrentserver_update">Install/Update TorrentServer</string>
+    <string name="torrentserver_isrunning">TorrentServer is running</string>
+</resources>
